tests/ui/bitfield/field_value_out_of_bounds_signed_8_1s_i16.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_8_1s_i16.rs:6:44
  |
6 | struct BitField(#[field(size = 1, signed)] Field);
  |                                            ^^^^^ the evaluated program panicked at 'Size of the field type exceeds the specified field size of 1 bit', $DIR/tests/ui/bitfield/field_value_out_of_bounds_signed_8_1s_i16.rs:6:44
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Field as TryFrom<i8>>::Error == i8`
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_8_1s_i16.rs:6:44
  |
6 | struct BitField(#[field(size = 1, signed)] Field);
  |                                            ^^^^^ expected `i8`, found `Infallible`

error[E0277]: the trait bound `Field: TryFrom<i8>` is not satisfied
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_8_1s_i16.rs:6:32
  |
6 | struct BitField(#[field(size = 1, signed)] Field);
  |                                ^^^^^^^^^^^^-----
  |                                |           |
  |                                |           required by a bound introduced by this call
  |                                the trait `From<i8>` is not implemented for `Field`
  |
  = help: the trait `TryFrom<i8>` is not implemented for `Field`
          but trait `TryFrom<i16>` is implemented for it
  = help: for that trait implementation, expected `i16`, found `i8`
  = note: required for `i8` to implement `Into<Field>`
  = note: required for `Field` to implement `TryFrom<i8>`

error[E0277]: the trait bound `Field: From<i8>` is not satisfied
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_8_1s_i16.rs:6:44
  |
6 | struct BitField(#[field(size = 1, signed)] Field);
  |                                            ^^^^^ the trait `From<i8>` is not implemented for `Field`
  |
  = help: the trait `TryFrom<i8>` is not implemented for `Field`
          but trait `TryFrom<i16>` is implemented for it
  = help: for that trait implementation, expected `i16`, found `i8`
  = note: required for `i8` to implement `Into<Field>`
  = note: required for `Field` to implement `TryFrom<i8>`
